@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygments/pygments-1.6_p20140324.ebuild,v 1.2 2014/04/01 04:46:27 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygments/pygments-1.6_p20140324.ebuild,v 1.3 2014/04/01 14:43:08 floppym Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3,3_4} pypy pypy2_0 )
@@ -22,6 +22,7 @@ IUSE="doc test"
 
 RDEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
 DEPEND="${RDEPEND}
+	doc? ( dev-python/sphinx[${PYTHON_USEDEP}] )
 	test? (
 		dev-python/nose[${PYTHON_USEDEP}]
 		virtual/ttf-fonts
@@ -29,6 +30,10 @@ DEPEND="${RDEPEND}
 	)"
 
 #S="${WORKDIR}/${MY_P}"
+
+python_compile_all() {
+	use doc && emake -C doc html
+}
 
 python_test() {
 	cp -r -l tests "${BUILD_DIR}"/ || die
@@ -44,7 +49,7 @@ python_test() {
 }
 
 python_install_all() {
-	use doc && local HTML_DOCS=( docs/build/. )
+	use doc && local HTML_DOCS=( doc/_build/html/. )
 
 	distutils-r1_python_install_all
 	newbashcomp external/pygments.bashcomp ${PN}
