@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pygments
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygments/ChangeLog,v 1.121 2014/04/01 04:46:27 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygments/ChangeLog,v 1.122 2014/04/01 14:43:08 floppym Exp $
+
+  01 Apr 2014; Mike Gilbert <floppym@gentoo.org> pygments-1.6_p20140324.ebuild:
+  Build docs using sphinx, bug 506414 by Juergen Rose.
 
   01 Apr 2014; Mike Gilbert <floppym@gentoo.org> pygments-1.6_p20140324.ebuild:
   Restore python3.2, though it fails a few tests.
